Fix overflow issues

--- a/styles/general.css
+++ b/styles/general.css
@@ -11,6 +11,7 @@ body {
   font-family: "Poppins", sans-serif;
   color: white;
   padding: 32px 24px;
+  overflow-x: hidden;
 }
 
 .text-gradient {
